adds HOG and landmarks

--- a/Tutorials/Face_detection.ipynb
+++ b/Tutorials/Face_detection.ipynb
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](figs/fpoint.png)"
+    "![](figs/face_points.png)"
    ]
   },
   {
@@ -670,6 +670,13 @@
     "cv.imshow(winname='original', mat=image)\n",
     "cv.imshow(winname='Marked', mat=image_marked)\n",
     "cv.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](figs/fpoint.png)"
    ]
   },
   {
