adds HOG and landmarks

--- a/Tutorials/Face_detection.ipynb
+++ b/Tutorials/Face_detection.ipynb
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](figs/face_points.png)"
+    "![](figs/hog_face_detected.png)"
    ]
   },
   {
